Commint firt versión estable.
-> GetUsers without login.

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=api
+spring.jpa.database=MYSQL
+spring.jpa.show-sql=true
+# Value = none (no crea tablas), update mapea las tablas
+spring.jpa.hibernate.ddl-auto=update 
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/api
+spring.datasource.username=root
+spring.datasource.password=root
+
