--- a/api/pom.xml
+++ b/api/pom.xml
@@ -93,6 +93,11 @@
             <version>1.18.24</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+            <version>3.0.0</version>
+        </dependency>
 
     </dependencies>
 
