--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -8,3 +8,9 @@ spring.datasource.url=jdbc:mysql://localhost:3306/api
 spring.datasource.username=root
 spring.datasource.password=root
 
+
+#Endpoints
+endpoints.login=/auth/login
+endpoints.register=/users/register
+
+
